--- a/public/i18n/th.json
+++ b/public/i18n/th.json
@@ -5,7 +5,8 @@
         "careers": "บริษัทแปซิฟิกซี บีพีโอ เซอร์วิส",
         "faq": "บริษัทแปซิฟิกซี บีพีโอ เซอร์วิส",
         "terms": "บริษัทแปซิฟิกซี บีพีโอ เซอร์วิส",
-        "privacy_policy": "บริษัทแปซิฟิกซี บีพีโอ เซอร์วิส"
+        "privacy_policy": "บริษัทแปซิฟิกซี บีพีโอ เซอร์วิส",
+        "language": "th"
     },
     "home": {
         "navbar_title": "หน้าแรก",
@@ -2072,11 +2073,11 @@
         ]
     },
     "footer_section": {
-        "terms_of_use": " ข้อกำหนดและเงื่อนไข",
+        "terms_of_use": "ข้อกำหนดและเงื่อนไข",
         "privacy_policy": "นโยบายสิทธิส่วนบุคคล",
         "contact": "ติดต่อบริษัท",
         "follow_us": "ติดตามเราได้ที่",
         "registered_company": "ที่ตั้งสำนักงาน",
-        "copyright": "สงวนลิขสิทธิ์ [year] โดยบริษัท แปซิฟิกซี บีพีโอ เซอร์วิส"
+        "copyright": "© สงวนลิขสิทธิ์ {{year}} โดยบริษัท แปซิฟิกซี บีพีโอ เซอร์วิส"
     }
 }
