--- a/public/i18n/vn.json
+++ b/public/i18n/vn.json
@@ -5,7 +5,8 @@
         "careers": "Careers | Pacific Sea BPO Services, Ltd.",
         "faq": "FAQS | Pacific Sea BPO Services, Ltd.",
         "terms": "Terms of Use | Pacific Sea BPO Services, Ltd.",
-        "privacy_policy": "Privacy Policy | Pacific Sea BPO Services, Ltd."
+        "privacy_policy": "Privacy Policy | Pacific Sea BPO Services, Ltd.",
+        "language": "vn"
     },
     "home": {
         "navbar_title": "TRANG CHỦ",
@@ -2078,6 +2079,6 @@
         "contact": "LIÊN HỆ",
         "follow_us": "THEO DÕI",
         "registered_company": "ĐỊA CHỈ ĐĂNG KÝ",
-        "copyright": "[year] Pacific Sea BPO Services, Inc. All rights reserved."
+        "copyright": "© {{year}} Pacific Sea BPO Services, Inc. Mọi quyền được bảo lưu."
     }
 }
